--- a/5/index.html
+++ b/5/index.html
@@ -7,7 +7,7 @@
     <base href="https://htmlacademy-htmlcss.github.io/2028317-device-35/5/">
 </head>
   <body>
-    <header class="page-header">
+    <header class="page-header wrapper">
       <h1 class="visually-hidden">Интернет магазин техники Device</h1>
       <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
 
@@ -44,7 +44,7 @@
             <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
           </div>
 
-          <ul class="navigation-section-item">
+          <ul class="navigation-section-item navigation-section-wide">
             <li class="navigation-item">
               <a class="navigation-link" href="#">Доставка</a>
             </li>
@@ -57,54 +57,20 @@
           </ul>
         </nav>
       </div>
-
-      <!-- ТАК БЫЛО ДО -->
-
-      <!-- <nav class="navigation">
-
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
-            <a class="navigation-user-link" href="#">Войти</a>
-          </li>
-          <li class="navigation-item">
-            <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
-            <a class="navigation-user-link" href="#">Сравнить</a>
-          </li>
-          <li class="navigation-item">
-            <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
-            <a class="navigation-user-link" href="#">Корзина</a>
-          </li>
-        </ul>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Каталог товаров</a>
-            <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Доставка</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Гарантия</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Контакты</a>
-          </li>
-        </ul>
-      </nav> -->
     </header>
 
-    <main class="main-container main-index">
-      <div class="page-container">
-        <section class="slider">
-          <div class="slider-img">
-            <img class="???" src="images/icons-arrow-left.svg" width="20px" height="60px">
-            <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
-            <img class="???" src="images/icons-arrow-right.svg" width="20px" height="60px">
-          </div>
 
+    <main class="main-container main-index">
+      <section class="slider wrapper">
+        <!-- СТРЕЛКИ -->
+        <div class="slider first-slide">
+          <div class="slider-img">
+            <!-- <img src="images/icons-arrow-left.svg" width="20px" height="60px"> -->
+            <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
+            <!-- <img src="images/icons-arrow-right.svg" width="20px" height="60px"> -->
+          </div>
           <div>
-            <span class="number">01</span>
+            <span class="slider-number">01</span>
             <h2 class="main-title">Порхает как бабочка, жалит как пчела!</h2>
             <p class="text">
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
@@ -120,52 +86,63 @@
                 <td>Радиус поражения</td>
               </tr>
             </table>
-         </div>
-        </section>
+          </div>
+        </div>
 
-        <section>
-          <h2 class="visually-hidden">Продукты</h2>
-          <ul class="category-list">
-            <li class="category-card">
-              <a class="category-card-link" href="#">
-                <img class="category-card-image" src="images/category-vr.png" width="160" height="160" alt="Очки виртуальной реальности">
-                <p>Виртуальная реальность</p>
-              </a>
-            </li>
-            <li class="category-card">
-              <a class="category-card-link" href="#">
-                <img class="category-card-image" src="images/category-monopods-for-selfie.png" width="160" height="160" alt="Монопод для селфи">
-                <p>Моноподы для селфи</p>
-              </a>
-            </li>
-            <li class="category-card">
-              <a class="category-card-link" href="#">
-                <img class="category-card-image" src="images/category-action-cameras.png" width="160" height="160" alt="Экшн-камера">
-                <p>Экшн-камеры</p>
-              </a>
-            </li>
-            <li class="category-card">
-              <a class="category-card-link" href="#">
-                <img class="category-card-image" src="images/category-fitness-bracelets.png" width="160" height="160" alt="Фитнес-браслет">
-                <p>Фитнес-браслеты</p>
-              </a>
-            </li>
-            <li class="category-card">
-              <a class="category-card-link" href="#">
-                <img class="category-card-image" src="images/category-smart-watch.png" width="160" height="160" alt="Умные часы">
-                <p>Умные часы</p>
-              </a>
-            </li>
-            <li class="category-card">
-              <a class="category-card-link" href="#">
-                <img class="category-card-image" src="images/category-quadrocopter.png" width="160" height="160" alt="Квадрокоптер">
-                <p>Квадрокоптеры</p>
-              </a>
-            </li>
-          </ul>
-        </section>
+        <!-- <div class="slider second-slide"></div>
+        <div class="slider third-slide"></div> -->
 
-        <section class="advantage">
+        <!-- <div class="slider-navigation">
+          <button><img src="images/icons-arrow-left.svg" width="20px" height="60px"></button>
+          <button><img src="images/icons-arrow-right.svg" width="20px" height="60px"></button>
+        </div> -->
+
+      </section>
+
+      <section class="category wrapper">
+        <h2 class="visually-hidden">Продукты</h2>
+        <ul class="category-list">
+          <li class="category-card">
+            <a class="category-card-link" href="#">
+              <img class="category-card-image" src="images/category-vr.png" width="160" height="160" alt="Очки виртуальной реальности">
+              <p>Виртуальная реальность</p>
+            </a>
+          </li>
+          <li class="category-card">
+            <a class="category-card-link" href="#">
+              <img class="category-card-image" src="images/category-monopods-for-selfie.png" width="160" height="160" alt="Монопод для селфи">
+              <p>Моноподы для селфи</p>
+            </a>
+          </li>
+          <li class="category-card">
+            <a class="category-card-link" href="#">
+              <img class="category-card-image" src="images/category-action-cameras.png" width="160" height="160" alt="Экшн-камера">
+              <p>Экшн-камеры</p>
+            </a>
+          </li>
+          <li class="category-card">
+            <a class="category-card-link" href="#">
+              <img class="category-card-image" src="images/category-fitness-bracelets.png" width="160" height="160" alt="Фитнес-браслет">
+              <p>Фитнес-браслеты</p>
+            </a>
+          </li>
+          <li class="category-card">
+            <a class="category-card-link" href="#">
+              <img class="category-card-image" src="images/category-smart-watch.png" width="160" height="160" alt="Умные часы">
+              <p>Умные часы</p>
+            </a>
+          </li>
+          <li class="category-card">
+            <a class="category-card-link" href="#">
+              <img class="category-card-image" src="images/category-quadrocopter.png" width="160" height="160" alt="Квадрокоптер">
+              <p>Квадрокоптеры</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantage">
+        <div class="advantage-wrapper wrapper">
           <h2 class="visually-hidden">Преимущества</h2>
           <div class="advantage-list">
             <button class="advantage-button active" type="button">Доставка</button>
@@ -173,60 +150,70 @@
             <button class="advantage-button" type="button">Кредит</button>
           </div>
           <div class="advantage-item">
-            <div>
-              <h3 class="main-title">Доставка</h3>
-              <p class="text">
-                Мы с удовольствием доставим ваш товар прямо
-                к вашему подъезду совершенно бесплатно! Ведь
-                мы неплохо заработаем, поднимая его на ваш этаж.
-              </p>
+            <div class="advantage-delivery">
+              <div>
+                <h3 class="main-title">Доставка</h3>
+                <p class="text">
+                  Мы с удовольствием доставим ваш товар прямо
+                  к вашему подъезду совершенно бесплатно! Ведь
+                  мы неплохо заработаем, поднимая его на ваш этаж.
+                </p>
+              </div>
+              <div>
+                <img class="advantage-image" src="images/advantage-delivery.svg" width="136" height="164" alt="Доставщик">
+              </div>
             </div>
-            <div>
-              <img class="advantage-image" src="images/advantage-delivery.svg" width="136" height="164" alt="Доставщик">
-            </div>
+
+            <!-- <div class="advantage-guarantee"></div>
+            <div class="advantage-credit"></div> -->
+
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- Рассмотрим эту секцию позже -->
-        <section>
-          <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
-          <button class="delivery-button">
-            <img class="icons-car" src="images/icons-car.svg" width="47px" height="31px">
-              Доставим редкий товар под заказ
-            <img class="icons icons-notice" src="images/icons-notice.svg" width="2px" height="12px">
-          </button>
-        </section>
+      <!-- Рассмотрим эту секцию позже -->
+      <section class="wrapper">
+        <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
+        <button class="delivery-button">
+          <img class="icons-car" src="images/icons-car.svg" width="47px" height="31px">
+            Доставим редкий товар под заказ
+          <img class="icons icons-notice" src="images/icons-notice.svg" width="2px" height="12px">
+        </button>
+      </section>
 
-        <section class="section-contact">
-          <div class="contacts">
-            <h2 class="main-title">О нас</h2>
-            <p class="text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p class="text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-            <ul class="delivery-item">
-              <li class="delivery-list"><span>Меловые линии</span></li>
-              <li class="delivery-list"><span>СДИК</span></li>
-              <li class="delivery-list"><span>ТоксБерри</span></li>
-            </ul>
-            <a class="main-button" href="#">Подробнее о нас</a>
-          </div>
+      <section class="section-contact wrapper">
+        <div class="contacts">
+          <img src="images/icons-line-black.svg" width="84px" height="7px">
+          <h2 class="main-title">О нас</h2>
+          <p class="text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+          <ul class="delivery-item">
+            <li class="delivery-list"><span>Меловые линии</span></li>
+            <li class="delivery-list"><span>СДИК</span></li>
+            <li class="delivery-list"><span>ТоксБерри</span></li>
+          </ul>
+          <a class="main-button" href="#">Подробнее о нас</a>
+        </div>
 
-          <div class="contacts">
-            <h2 class="main-title">Контакты</h2>
-            <p class="text">Вы можете забрать товар сами, заехав в наш офис.
-              Заодно сможете проверить работоспособность покупки. </p>
-            <h3 class="subtitle">Интернет-магазин «Девайс»</h3>
-              <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
-              <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-            <h3 class="subtitle">Время работы</h3>
-            <ul class="contacts-schedule">
-              <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
-              <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
-            </ul>
-            <a class="main-button" href="#">Напишите нам</a>
-          </div>
-        </section>
+        <div class="contacts">
+          <img src="images/icons-line-black.svg" width="84px" height="7px">
+          <h2 class="main-title">Контакты</h2>
+          <p class="text">Вы можете забрать товар сами, заехав в наш офис.
+            Заодно сможете проверить работоспособность покупки. </p>
+          <h3 class="subtitle">Интернет-магазин «Девайс»</h3>
+            <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
+            <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+          <h3 class="subtitle">Время работы</h3>
+          <ul class="contacts-schedule">
+            <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+            <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+          </ul>
+          <a class="main-button" href="#">Напишите нам</a>
+        </div>
+      </section>
 
-        <section class="section-distribution">
+      <section class="section-distribution">
+        <div class="wrapper">
           <div class="section-distribution-top">
             <h2 class="main-title">Подпишитесь на рассылку</h2>
             <p class="text">Еженедельный дайджест с обзорами новинок,
@@ -242,60 +229,63 @@
               <img class="icons" src="images/icons-tick-green.svg" width="16px" height="16px">
               <p class="text">Это бесплатно</p>
             </div>
-         </div>
-        </section>
-       </div>
+          </div>
+        </div>
+      </section>
     </main>
 
+
     <footer class="page-footer">
-      <img class="logo logo-footer" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
-      <div class="footer-column">
-        <div class="footer-section footer-section-left">
-          <address class="contacts-footer">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
-          <img src="images/icons-line.svg" width="80px" height="7px">
-        </div>
+      <div class="wrapper">
+        <img class="logo logo-footer" src="images/logo-device-yellow.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+        <div class="footer-column">
+          <div class="footer-section footer-section-left">
+            <address class="contacts-footer">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
+            <img src="images/icons-line.svg" width="80px" height="7px">
+          </div>
 
-        <div class="footer-section footer-section-center">
-          <div class="page-footer-top">
-            <ul class="navigation-list">
+          <div class="footer-section footer-section-center">
+            <div class="page-footer-top">
+              <ul class="navigation-list">
+                <li class="navigation-item">
+                  <a class="navigation-link text-footer" href="#">Доставка</a>
+                </li>
               <li class="navigation-item">
-                <a class="navigation-link text-footer" href="#">Доставка</a>
+                <a class="navigation-link text-footer" href="#">Гарантия</a>
               </li>
-            <li class="navigation-item">
-              <a class="navigation-link text-footer" href="#">Гарантия</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link text-footer" href="#">Контакты</a>
-            </li>
-            </ul>
+              <li class="navigation-item">
+                <a class="navigation-link text-footer" href="#">Контакты</a>
+              </li>
+              </ul>
+            </div>
+            <div class="page-footer-bottom">
+              <ul class="footer-social-list">
+                <li class="footer-social-item">
+                  <a class="social-button" href="https://t.me/htmlacademy">
+                    <span class="visually-hidden">Telegram</span>
+                    <img src="images/social-networks-telegram.svg" width="14px" height="12px">
+                  </a>
+                </li>
+                <li class="footer-social-item">
+                  <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+                    <span class="visually-hidden">YouTube</span>
+                    <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
+                  </a>
+                </li>
+                <li class="footer-social-item">
+                  <a class="social-button" href="https://twitter.com/htmlacademy_ru">
+                    <span class="visually-hidden">Twitter</span>
+                    <img src="images/social-networks-twitter.svg" width="15px" height="14px">
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="page-footer-bottom">
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a class="social-button" href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Telegram</span>
-                  <img src="images/social-networks-telegram.svg" width="14px" height="12px">
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">YouTube</span>
-                  <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="social-button" href="https://twitter.com/htmlacademy_ru">
-                  <span class="visually-hidden">Twitter</span>
-                  <img src="images/social-networks-twitter.svg" width="15px" height="14px">
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
 
-        <div class="footer-section footer-section-right">
-          <a class="contacts-footer" href="tel:88128121212">+7 (812) 812-12-12</a>
-          <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
+          <div class="footer-section footer-section-right">
+            <a class="contacts-footer" href="tel:88128121212">+7 (812) 812-12-12</a>
+            <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
+          </div>
         </div>
       </div>
 
